[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fontDump/textFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fontDump/headerFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/UITheme.tres" type="Theme" id=4]
[ext_resource path="res://Sound/Menu/ButtonPressedAudio.tscn" type="PackedScene" id=5]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -82.5
margin_right = 225.5
margin_bottom = 82.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_right = 459.0
margin_bottom = 224.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer/MarginContainer"]
margin_right = 459.0
margin_bottom = 224.0
color = Color( 0, 0, 0, 0.47451 )

[node name="Items" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_right = 459.0
margin_bottom = 224.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/MarginContainer/Items"]
margin_right = 459.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )
text = "Game paused"

[node name="Continue" type="Button" parent="CenterContainer/MarginContainer/Items"]
margin_top = 83.0
margin_right = 459.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"
expand_icon = true

[node name="Settings" type="Button" parent="CenterContainer/MarginContainer/Items"]
margin_top = 135.0
margin_right = 459.0
margin_bottom = 172.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="Exit" type="Button" parent="CenterContainer/MarginContainer/Items"]
margin_top = 187.0
margin_right = 459.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[node name="ButtonPressedAudio" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="CenterContainer/MarginContainer/Items/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/Items/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/Items/Exit" to="." method="_on_Exit_pressed"]
